Add missing path of the Dockerfile for the image

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,7 +20,7 @@ jobs:
       
       - name: Build the SGAC Docker image
         run: |
-          docker build -t ghcr.io/ChemaCLi/sgac-js:latest
+          docker build . -t ghcr.io/ChemaCLi/sgac-js:latest
           docker push ghcr.io/ChemaCLi/sgac-js:latest
 
   deploy:
