--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -27,6 +27,19 @@ jobs:
     needs: create-docker-image-on-self-hosted-arm64
     runs-on: ubuntu-latest
     steps:
+    - name: Generate SSH key
+        run: |
+          ssh-keygen -t rsa -b 4096 -C "github-action" -f ~/.ssh/id_rsa -N ""
+          echo "SSH_PRIVATE_KEY=$(cat ~/.ssh/id_rsa)" >> $GITHUB_ENV
+          echo "SSH_PUBLIC_KEY=$(cat ~/.ssh/id_rsa.pub)" >> $GITHUB_ENV
+
+    - name: Add SSH Key to GitHub Secrets
+      env:
+        SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+      run: |
+        echo "$SSH_PRIVATE_KEY" | tr -d '\r' > ~/.ssh/id_rsa
+        chmod 600 ~/.ssh/id_rsa
+
       - name: executing remote ssh commands using password
         uses: appleboy/ssh-action@v1.1.0
         with:
@@ -34,9 +47,9 @@ jobs:
           username: ${{ secrets.SGAC_SSH_USER }}
           password: ${{ secrets.SGAC_SSH_PASSWORD }}
           port: 22
-          key: ${{ secrets.GITHUB_PUBLIC_KEY }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
-            echo "${{ secrets.GITHUB_PUBLIC_KEY }}" >> ~/.ssh/authorized_keys
+            echo "${{ secrets.SSH_PRIVATE_KEY }}" >> ~/.ssh/authorized_keys
             whoami
             cd ~/sgacjs
             docker login ghcr.io -u ${{ github.actor }} -p ${{ secrets.SGAC_DEPLOY_TOKEN }}
